--- a/src/app/pages/task-page/task-page.component.scss
+++ b/src/app/pages/task-page/task-page.component.scss
@@ -1,22 +1,18 @@
 @use "../../../import" as *;
 
+.app-container {
+    margin-left: 0;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+}
 .content {
-    padding: 20px;
     flex-grow: 1;
-    width: 90vw;
+    width: fit-content;
     max-width: 600px;
     margin: 0 auto;
-}
-.filter {
-    margin-bottom: 1rem;
-}
-.app-container {
-    margin-left: $sidenav-width;
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 2rem;
 }
 .sidebar {
     width: 250px;
@@ -30,16 +26,19 @@
     height: 100%;
     border-right: 1px solid #A79B93;
 }
-/* Media Queries for Mobile Devices */
-@media (max-width: 768px) {
-    .content {
-      margin: 0 auto;
-      width: fit-content;
+.filter {
+    margin-bottom: 1rem;
+}
+/* Media Queries for Desktop */
+@media (min-width: 768px) {
+    .content { 
+      width: 90vw;
     }
     .app-container{
-        margin-left: 0;
-        flex-direction: column;
-        justify-content: center;
+        margin-left: $sidenav-width;
+        padding: 1rem;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
 
